Expand help articles

--- a/src/help.de.html
+++ b/src/help.de.html
@@ -1,7 +1,29 @@
-<h3>Funktionen</h3>
+<h3>Los geht's</h3>
+<p>Drück auf den großen Würfel und lass dich überraschen. Wir picken zufällig eine Station heraus – du packst die Neugier ein.</p>
+
+<h3>Unterwegs</h3>
 <ul>
-  <li>Würfle zufällige Stationen in Berlin.</li>
-  <li>Markiere besuchte Stationen und füge Notizen oder Fotos hinzu.</li>
-  <li>Verwalte deine Daten mit Backups und Einstellungen.</li>
+  <li>Station erreicht? Tipp sie an und markier sie als besucht.</li>
+  <li>Notizen oder Fotos sind optional, aber super für dein Reisetagebuch.</li>
+  <li>Keine Lust zu warten? Shake dein Handy und würfel noch mal.</li>
 </ul>
-<p>Viel Spaß auf deiner Zufallstour!</p>
+
+<h3>Besuchte Bahnhöfe</h3>
+<p>Hier findest du all deine bereits eroberten Haltestellen. Sortier, such oder schwelg einfach in Erinnerungen – die Liste wächst mit dir.</p>
+
+<h3>Einstellungen &amp; Backups</h3>
+<ul>
+  <li><strong>Home-Station:</strong> Damit weiß die App, wo du losfährst.</li>
+  <li><strong>Würfel-Cooldown:</strong> Du entscheidest, ob wir dich kurz bremsen oder direkt weiterwürfeln lassen.</li>
+  <li><strong>Backups:</strong> Exportiere deine Daten als JSON oder importiere sie wieder. Sicher ist sicher.</li>
+  <li><strong>Konto:</strong> Passwort ändern, Konto löschen oder einfach mal ausloggen – ganz wie du magst.</li>
+</ul>
+
+<h3>Tipps &amp; Tricks</h3>
+<ul>
+  <li>Du kannst auch manuell Besuche eintragen – für die Fälle, in denen der Würfel mal Pause macht.</li>
+  <li>Trink genug Wasser und vergiss nicht, ab und zu aus dem Fenster zu schauen.</li>
+  <li>Dein Abenteuergeist ist der wichtigste Begleiter – neben dem Ticket natürlich.</li>
+</ul>
+
+<p>Viel Spaß auf deiner Zufallstour! Berlin ist groß, aber deine Liste wird größer.</p>
