--- a/profile.html
+++ b/profile.html
@@ -19,6 +19,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/profile.jsx"></script>
+    <script type="module" src="/src/profile.tsx"></script>
   </body>
 </html>
